--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,13 @@ img.imagen{
     border-style: solid;
 
 }
+/* Noticias */
+.news{
+    border-radius: 10px;
+    background-color: #f3730b;
+}
+
+
 /*Footer*/
 footer{
     background-color: #f3730b;
@@ -124,3 +131,4 @@ h4{
     margin: 20px;
     margin-top: auto;
 }
+
