--- a/styles.css
+++ b/styles.css
@@ -58,31 +58,29 @@ img.imagen{
 }
 /*----------------------------------------*/
 .foto {
-    width: 80px;
-    height: 100px;
+    width: 100%;
+    height: 105px;
     border-radius: 20px;
     border: 1.5px solid #006400;
-    margin-left: 20px;
-    
 }   
 
 .tituloSc4{
-    margin-top: 100px;
+    margin-top: 50px;
     color: #373636;
     text-align: center;
     background-color: #f3730b;
 }
 
-.presentacionIntegrantes div{
+.team-section div{
+    overflow: auto;
     color: #373636;
     background-color: #f3730b;
     display: inline-block;
-    overflow: hidden;
     border-radius: 10px;
     padding: 10px;
     margin-left: 7px;
-    width: 19%;
-    height: 470px;
+    width: 18.6%;
+    height: 500px;
     box-sizing: border-box;
     font-size: 12px;
 }
