--- a/styles.css
+++ b/styles.css
@@ -55,38 +55,41 @@ img.imagen{
     border-collapse: collapse;
 }
 /*----------------------------------------*/
-.foto {
-    width: 100%;
-    height: 105px;
-    border-radius: 20px;
-    border: 1.5px solid #006400;
-}   
 
 .tituloSc4{
     margin-top: 50px;
     color: #373636;
     text-align: center;
     background-color: #f3730b;
+    padding: 4px;
 }
 
-.team-section div{
-    overflow: auto;
-    color: #373636;
-    background-color: #f3730b;
-    display: inline-block;
+.team-section{
     border-radius: 10px;
-    padding: 10px;
-    margin-left: 7px;
-    width: 18.6%;
-    height: 500px;
-    box-sizing: border-box;
-    font-size: 12px;
+    display: flex;
+    background-color: #f3730b;
+    padding: 1%;
+    margin-top: 20px;
+    margin-right: 30px;
+    margin-bottom: 20px;
+    margin-left: 30px;
 }
 
-.presentacionIntegrantes hr{
-    color: darkgreen;
-    background-color: #111;
-    border-style: solid;
+/* .containerFoto{
+    width: 200px;
+} */
+
+.foto {
+    box-sizing: border-box;
+    width: 150px;
+    height: 200px;
+    margin: 10px;
+    /* border-radius: 300px; */
+    border: 1.5px solid #006400;
+}   
+
+.textoP{
+    margin: 1%;
 }
 
 /* Noticias */
