--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,20 @@
-
+/* Header */
+nav{
+    background-color: #f3730b;
+    text-align: center;
+}
+nav a{
+    font-size: 1.3em;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+.imagenHeader{
+    width: 100%;
+    height: 20%;
+    /* margin: 30px; */
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background-color: #f3730b;
+}
 /*Seccion de servicios*/
 img.imagen{
     box-sizing: border-box;
